# super_avalanche-rs

./: .clippy.toml  .gitignore  .rustfmt.toml  .windsurfrules  Cargo.toml  README_CN.md  project_structure_readme.md
.cargo/: config.toml
.github/workflows/: publish.yml
avalanchego-conformance/: README_CN.md
avalanchego-conformance-sdk/: Cargo.toml  README_CN.md  build.rs
avalanchego-conformance-sdk/examples/: README_CN.md
avalanchego-conformance-sdk/scripts/: README_CN.md
avalanchego-conformance-sdk/src/: README_CN.md  lib.rs
avalanchego-conformance/client/: README_CN.md
avalanchego-conformance/cmd/: README_CN.md
avalanchego-conformance/cmd/avalanchego-conformance/: README_CN.md
avalanchego-conformance/cmd/avalanchego-conformance/server/: README_CN.md
avalanchego-conformance/pkg/: README_CN.md
avalanchego-conformance/pkg/color/: README_CN.md
avalanchego-conformance/pkg/logutil/: README_CN.md
avalanchego-conformance/rpcpb/: README_CN.md
avalanchego-conformance/scripts/: README_CN.md
avalanchego-conformance/server/: README_CN.md  message.go
core/: README_CN.md
core/cert-manager/: Cargo.toml  README_CN.md
core/cert-manager/src/: README_CN.md  lib.rs  x509.rs
core/network/: Cargo.toml  README_CN.md
core/network/examples/: README_CN.md
core/network/src/: README_CN.md  lib.rs
core/network/src/peer/: README_CN.md  inbound.rs  mod.rs  outbound.rs
core/server/: README_CN.md
core/server/src/: README_CN.md  handler.rs  lib.rs
crates/: README.md  README_CN.md
crates/avalanche-consensus/: Cargo.toml  README_CN.md
crates/avalanche-consensus/src/: README_CN.md  context.rs  lib.rs
crates/avalanche-consensus/src/snowman/: README_CN.md  mod.rs  topological.rs
crates/avalanche-types/: Cargo.toml  README_CN.md
crates/avalanche-types/examples/: README_CN.md  evm_contract_abi_calldata.rs  evm_contract_counter_get_last.rs  evm_contract_counter_increment.rs  evm_contract_counter_increment_append_calldata.rs  evm_contract_counter_increment_forwarder_execute.rs  evm_contract_counter_increment_forwarder_proxy_call.rs  evm_contract_counter_increment_forwarder_relay_eip712.rs  evm_contract_erc20_simple_token_increase_allowance_forwarder_relay_eip712.rs  evm_contract_erc20_simple_token_transfer_from_forwarder_relay_eip712.rs  evm_contract_erc721_my_token_approve_forwarder_relay_eip712.rs  evm_contract_erc721_my_token_mint_forwarder_relay_eip712.rs  evm_contract_erc721_my_token_transfer_from_forwarder_relay_eip712.rs  evm_contract_forwarder_get_nonce.rs  evm_contract_simple_registry_register.rs  evm_contract_simple_registry_register_forwarder_execute.rs  evm_contract_simple_registry_register_forwarder_relay_eip712.rs  evm_contract_voter_vote_a_forwarder_relay_eip712.rs  evm_eip712_gsn_domain_separator.rs  evm_eip712_gsn_request_type_hash.rs  evm_send_raw_transaction_eip1559_hot_key.rs  evm_send_raw_transaction_eip1559_kms_aws.rs  jsonrpc_client_evm.rs  jsonrpc_client_info.rs  jsonrpc_client_p.rs  key_cert.rs  key_secp256k1_info_load_avax.rs  key_secp256k1_info_load_eth.rs  key_secp256k1_kms_aws.rs  key_secp256k1_mnemonic_derive_load.rs  proto_client.rs  proto_server.rs  wallet_evm_send_transaction_hot_key.rs
crates/avalanche-types/fuzz/fuzz_targets/: ids.rs
crates/avalanche-types/scripts/: protobuf_codegen.sh
crates/avalanche-types/src/: README_CN.md  cmp_manager.rs  constants.rs  errors.rs  lib.rs  node.rs  units.rs  verify.rs
crates/avalanche-types/src/avalanchego/: aliases.rs  config.rs  genesis.rs  mod.rs
crates/avalanche-types/src/choices/: README_CN.md  decidable.rs  mod.rs  status.rs  test_decidable.rs
crates/avalanche-types/src/coreth/: chain_config.rs  genesis.rs
crates/avalanche-types/src/formatting/: mod.rs
crates/avalanche-types/src/hash/: mod.rs
crates/avalanche-types/src/ids/: bag.rs  bits.rs  mod.rs  node.rs  short.rs
crates/avalanche-types/src/jsonrpc/: admin.rs  avm.rs  common.rs  evm.rs  health.rs  info.rs  mod.rs  platformvm.rs
crates/avalanche-types/src/key/: README_CN.md
crates/avalanche-types/src/message/: README_CN.md  accepted.rs  accepted_frontier.rs  accepted_state_summary.rs  (+20 more)
protos/avalanche/: README.md  README_CN.md
protos/avalanche/p2p/: README_CN.md
protos/avalanche/vm/: README_CN.md
scripts/: README.md  README_CN.md  clippy.sh  format.sh  tests.fuzz.sh  tests.lint.sh
tests/: README_CN.md
tests/avalanche-e2e/: Cargo.toml
tests/avalanche-e2e/src/: command.rs  default_spec.rs  flags.rs  logs.rs  main.rs  spec.rs
(+194 files in other folders)
