[workspace]
exclude = [
    "target",
    ".cargo",
    "tests/avalanchego-byzantine",  # 临时排除有问题的测试
]
members = [
    "avalanchego-conformance-sdk",
    "core/cert-manager",
    "core/network",
    "core/server",
    "crates/avalanche-consensus",
    "crates/avalanche-types",
    "tests/avalanche-e2e",
    "tests/avalanchego-conformance",
]
default-members = ["crates/avalanche-types", "crates/avalanche-consensus"]
resolver = "2"

[workspace.dependencies]
tonic-build = { version = "0.11.0", features = ["prost"] }

[workspace.lints.rust]
# unsafe_code = "forbid"  # 注释掉或删除这一行
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
