[workspace]
members = [
    "core/cert-manager",
    "core/network",
    "core/server",
    "crates/avalanche-consensus",
    "crates/avalanche-types",
]
exclude = [
    "**/pb/**",
    "**/proto/pb/**",
    "**/fuzz/corpus/**",
    "**/fuzz/artifacts/**",
    "**/generated/**"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Avalanche Foundation <info@avax.network>"]
license = "Apache-2.0"
homepage = "https://avax.network"
repository = "https://github.com/ava-labs/avalanche-rs"

# 保留现有 lints 配置
[workspace.lints.rust]
# unsafe_code = "forbid"  # 注释掉这一行
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
missing_docs_in_private_items = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"

[workspace.dependencies]
# 保持asn1系列和ring的当前稳定版本
asn1-rs = "0.7.1"
asn1-rs-derive = "0.7.0"
asn1-rs-impl = "0.3.0"
ring = "0.17.14"

# 更新其他有稳定版本的依赖
der-parser = "10.0.0"
oid-registry = "0.8.1"
spin = "0.9.8"
syn = "2.0.101"
synstructure = "0.13.1"
untrusted = "0.9.0"
x509-parser = "0.17.0"
