[package]
name = "cert-manager"
version = "0.0.11" # https://crates.io/crates/cert-manager
edition = "2021"
rust-version = "1.70"
publish = true
description = "Cert manager in Rust"
repository = "https://github.com/gyuho/cert-manager"
readme = "README.md"
license = "Apache-2.0"
keywords = ["certificate", "x509", "tls", "crypto", "security"]
categories = ["cryptography", "authentication"]

# Add this to allow the multiple versions warning
[lints.clippy]
multiple_crate_versions = "allow"

[dependencies]
log = "0.4.20"
rand = "0.8.5"
random-manager = "0.0.5" # https://crates.io/crates/random-manager/versions
rcgen = { version = "0.12.1", features = ["pem", "x509-parser"] }
rsa = { version = "0.9.2", features = ["pem"] } # https://crates.io/crates/rsa
rustls = "0.22.2"
rustls-pemfile = "2.0.0"
# Use workspace dependencies for consistent versions
x509-parser = { workspace = true }
asn1-rs = { workspace = true }
asn1-rs-derive = { workspace = true }
asn1-rs-impl = { workspace = true }
der-parser = { workspace = true }
oid-registry = { workspace = true }
ring = { workspace = true }
spin = { workspace = true }
syn = { workspace = true }
synstructure = { workspace = true }
untrusted = { workspace = true }

[dev-dependencies]
env_logger = "0.11.2"
tempfile = "3.5.0"

[package.metadata.cargo-udeps.ignore]
normal = ["rsa"]
